--- a/css/order_list.css
+++ b/css/order_list.css
@@ -15,3 +15,7 @@ body{background: #ebebeb;}
 .wdxx .or_num{font-size: 0.75rem;margin-left:4.45rem;}
 .wdxx{position: relative;margin-bottom: 0.5rem;}
 .wdxx .or_time{font-size: 0.6rem;color: #787878;position: absolute;left: 1.2rem;top:2.25rem;}
+
+.highlight{border-bottom: 0.15rem solid #eda200;}
+
+.more{font-size: 0.6rem;margin-left:7.5rem;}
