--- a/css/public.css
+++ b/css/public.css
@@ -1,4 +1,5 @@
 Body,ul,ol,p,h1,h2,h3,h4,h5,dl,dd{ padding:0; margin:0;}
+input,button,select,textarea{outline:none;}
 li { list-style:none; }
 img{border: none;}
 a{text-decoration: none;}
@@ -7,3 +8,11 @@ body{height:100%;position:relative;overflow:hidden;}
 .wrap{width:18.75rem;height:100%;overflow:auto;padding-top: 2.2rem;}
 .header{position:absolute;left:0;top:0;width:17.75rem;height:0.9rem;background:#fff;padding: 0.65rem 0.5rem;z-index: 5;}
 .content{width: 18.75rem;margin-bottom: 10rem;}
+
+a:link{color:#000000;}   
+a:active{color:#000000;}   
+a:visited{color: #000000;}   
+a:hover{color:#000000;} 
+
+select,button,input[type="button"]{font-size: 0.5rem;}
+input[type="text"], input[type="num"],select{border: 0.025rem solid #aaaaaa;}
